Fixed colors on mobile

--- a/template/sass/_base.scss
+++ b/template/sass/_base.scss
@@ -8,7 +8,7 @@ $white:     #FDF9FD;
 $gray:      #ded9d9;
 $lightGray: #FAFAFA;
 $darkGray:  #9e9e9e;
-$grey:      #afafaf;
+$grey:      #838383;
 
 //-- FONTS
 // Size
