--- a/template/sass/_mobile.scss
+++ b/template/sass/_mobile.scss
@@ -293,7 +293,7 @@
 
     .footer-logo {
       font-family: 'Rubik', sans-serif;
-      color: $footBlack;
+      color: $grey;
       font-size: 20px;
       font-weight: 500;
     }
@@ -320,13 +320,13 @@
     .follow-us {
       font-family: 'Rubik', sans-serif;
       font-size: 16px;
-      color: $footBlack;
+      color: $grey;
     }
 
     .social-icons {
       font-size: 16px;
       text-decoration: none;
-      color: $footBlack;
+      color: $darkGray;
       margin-right: 20px;
     }
 
