--- a/template/sass/default.scss
+++ b/template/sass/default.scss
@@ -290,7 +290,7 @@
 
     .footer-logo {
       font-family: 'Rubik', sans-serif;
-      color: $darkGray;
+      color: $grey;
       font-size: 20px;
       font-weight: 500;
     }
@@ -312,7 +312,7 @@
     .follow-us {
       font-family: 'Rubik', sans-serif;
       font-size: 16px;
-      color: $darkGray;
+      color: $grey;
     }
 
     .social-icons {
